# cognee-qdrant-starter

./: .gitignore  README.md  download-from-spaces.py  pyproject.toml
cognee-pipeline/: ingest.py  pyproject.toml
cognee-pipeline/examples/local/: .env.example  restore_snapshots.py
lance-to-qdrant/: migrate.py  pyproject.toml
project1-procurement-search/: .env.example  app.py  pyproject.toml
project2-spend-analytics/: app.py  pyproject.toml
project3-anomaly-detective/: .env.example  app.py  pyproject.toml
